Passo 4: notificacoes + addAmizade